fix the apple icon overflow mobile

--- a/src/Views/Home/style.scss
+++ b/src/Views/Home/style.scss
@@ -545,7 +545,7 @@
 }
 
 // responsive
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
     html {
         font-size: 9px;
     }
